--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -71,7 +71,9 @@ agent any
 	    stage('ECR Image Push'){
 		    steps{
 			withDockerRegistry([url: "https://975072647018.dkr.ecr.ap-south-1.amazonaws.com/demo-repo",credentialsId: "Docker-AWS-Integration"]){
-				echo 'login succedded'
+				script{
+					echo 'login succedded'
+				}
 			}
 		    }
 	    }
