--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -16,56 +16,56 @@ agent any
 		}
 	    }	
 	}
-	    stage('Build-Automation'){
-		    steps{
-			    powershell './build_scripts/zip_creation.ps1'
-		    }
-	    }
-	    stage('SonarQube analysis') {
-    			steps {
-    				script {
-            				def SONARSCANNER = tool "sonar-scanner";
-            				withSonarQubeEnv("jenkins_sonarqube") {
-                 			bat "${SONARSCANNER}/bin/sonar-scanner.bat"
-         			}
-    			}
-     		}
-	}
-   	stage("Quality Gate") {
-            steps {
-                timeout(time: 1, unit: 'MINUTES') {
-                    // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
-                    // true = set pipeline to UNSTABLE, false = don't
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
-	    stage('Build-Management'){
-		    steps{
-			    rtUpload (   
-   				 serverId: 'generic-libs-prod',
-    					spec: '''{
-          					"files": [
-            						{
-              						"pattern": "./source-repo/app-$buildNo.zip",
-             						 "target": "generic-libs-prod/"
-           				 		}
-          					]
-   					 }''',
-				    buildName: 'Flask-App',
-				    buildNumber: buildNo,
-				)
+// 	    stage('Build-Automation'){
+// 		    steps{
+// 			    powershell './build_scripts/zip_creation.ps1'
+// 		    }
+// 	    }
+// 	    stage('SonarQube analysis') {
+//     			steps {
+//     				script {
+//             				def SONARSCANNER = tool "sonar-scanner";
+//             				withSonarQubeEnv("jenkins_sonarqube") {
+//                  			bat "${SONARSCANNER}/bin/sonar-scanner.bat"
+//          			}
+//     			}
+//      		}
+// 	}
+//    	stage("Quality Gate") {
+//             steps {
+//                 timeout(time: 1, unit: 'MINUTES') {
+//                     // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
+//                     // true = set pipeline to UNSTABLE, false = don't
+//                     waitForQualityGate abortPipeline: true
+//                 }
+//             }
+//         }
+// 	    stage('Build-Management'){
+// 		    steps{
+// 			    rtUpload (   
+//    				 serverId: 'generic-libs-prod',
+//     					spec: '''{
+//           					"files": [
+//             						{
+//               						"pattern": "./source-repo/app-$buildNo.zip",
+//              						 "target": "generic-libs-prod/"
+//            				 		}
+//           					]
+//    					 }''',
+// 				    buildName: 'Flask-App',
+// 				    buildNumber: buildNo,
+// 				)
 			    			    
-			rtPublishBuildInfo (
-    				serverId: 'generic-libs-prod',
-				buildName: 'Flask-App',
-				buildNumber: buildNo,
-			)
-		    }
-	    }
+// 			rtPublishBuildInfo (
+//     				serverId: 'generic-libs-prod',
+// 				buildName: 'Flask-App',
+// 				buildNumber: buildNo,
+// 			)
+// 		    }
+// 	    }
 	    stage('Build-Image'){
 		    steps{
-			    bat 'docker build -t flask-app:${BUILD_NUMBER} .'
+			    bat 'docker build -t flask-app:${env.BUILD_NUMBER} .'
 		    }
 	    }
 	    stage('Start-Image'){
@@ -73,7 +73,7 @@ agent any
 			    bat 'docker ps -f name=stringCalculation -q | xargs --no-run-if-empty docker container stop'
 			    bat 'docker container ls -a -fname=stringCalculation -q | xargs -r docker container rm'
 			    script{
-			    	bat 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:${BUILD_NUMBER}'
+			    	bat 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:${env.BUILD_NUMBER}'
 			    }
 		    }
 	    }
