--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -65,15 +65,15 @@ agent any
 // 	    }
 	    stage('Build-Image'){
 		    steps{
-			    powershell 'docker build -t flask-app:\$env:BUILD_NUMBER .'
+			    powershell 'docker build -t flask-app:\$env:buildNo .'
 		    }
 	    }
 	    stage('Start-Image'){
 		    steps{
-			    bat 'docker ps -f name=stringCalculation -q | xargs --no-run-if-empty docker container stop'
-			    bat 'docker container ls -a -fname=stringCalculation -q | xargs -r docker container rm'
+			    powershell 'docker ps -f name=stringCalculation -q | xargs --no-run-if-empty docker container stop'
+			    powershell 'docker container ls -a -fname=stringCalculation -q | xargs -r docker container rm'
 			    script{
-			    	powershell 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:\$env:BUILD_NUMBER'
+			    	powershell 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:\$env:buildNo'
 			    }
 		    }
 	    }
