--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -70,8 +70,8 @@ agent any
 	    }
 	    stage('Start-Image'){
 		    steps{
-			    powershell 'docker ps -f name=stringCalculation -q | xargs --no-run-if-empty docker container stop'
-			    powershell 'docker container ls -a -fname=stringCalculation -q | xargs -r docker container rm'
+			    bat 'docker ps -f name=stringCalculation -q | docker --no-run-if-empty container stop'
+			    bat 'docker container ls -a -fname=stringCalculation -q | docker -r container rm'
 			    script{
 			    	powershell 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:\$env:buildNo'
 			    }
