--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -75,6 +75,7 @@ agent any
 				    if (docker ps -fname=stringCalculation -q){    
 			    			powershell 'docker stop stringCalculation'
 			    			powershell 'Sleep -s 10'
+						powershell 'docker rm stringCalculation'
 				    }
 				    '''
 			    	powershell 'docker run -d -p 8996:5000 --rm --name stringCalculation flask-app:\$env:buildNo'
