--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -33,10 +33,12 @@ agent any
 	}
    	stage("Quality Gate") {
             steps {
-                timeout(time: 1, unit: 'MINUTES') {
-                    // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
-                    // true = set pipeline to UNSTABLE, false = don't
-                    waitForQualityGate abortPipeline: true
+		   try{    
+                     timeout(time: 1, unit: 'MINUTES') {
+                     waitForQualityGate abortPipeline: true
+		   }catch(Exception e){
+		      	throw e;	
+		   }
                 }
             }
         }
