--- a/liquibase-integration/liquibase.properties
+++ b/liquibase-integration/liquibase.properties
@@ -1,5 +1,5 @@
 changelog-file: ../path/to/file/dbchangelog.xml
 driver: org.postgresql.Driver
-url: jdbc:postgresql://localhost:5432/jenkins
+url: jdbc:postgresql://localhost:5432/postgres
 username: {{username}}
 password: {{password}}
