--- a/liquibase-integration/liquibase.properties
+++ b/liquibase-integration/liquibase.properties
@@ -1,4 +1,4 @@
-changelog-file: ../path/to/file/dbchangelog.xml
+changelog-file: changelog.xml
 driver: org.postgresql.Driver
 url: jdbc:postgresql://localhost:5432/postgres
 username: {{username}}
