--- a/liquibase-integration/liquibase.properties
+++ b/liquibase-integration/liquibase.properties
@@ -3,3 +3,4 @@ driver: org.postgresql.Driver
 url: jdbc:postgresql://localhost:5432/postgres
 username: {{username}}
 password: {{password}}
+liquibase-schema-name: jenkins
